syntax = "proto3";

package counter;

option go_package = "github.com/ghkadim/highload_architect/generated/counter/go_proto";

service CounterService {
  rpc Add(AddRequest) returns (AddReply) {}
}

message AddRequest {
  string counterName = 1;
  int64 amount = 2;
}

message AddReply {
  int64 value = 1;
}